fix #813 overflow issue in bridge
fix typo

fix typo

fix_typo

--- a/www/skins/prod/000000/prodcolor.css
+++ b/www/skins/prod/000000/prodcolor.css
@@ -3437,24 +3437,28 @@ dans l'onglet thesaurus : arbres, menus contextuels
     background-image: none;
 }
 
-#pub_tabs .container {
-    width: 660px;
-    background-color: #000000;
+#dialog_publicator .dropdown-menu {
+    min-width: 95px;
+    background-color: #393939;
+    *border: 1px solid #515151;
+}
+
+#dialog_publicator .dropdown-menu a {
+    padding: 3px 10px;
+    font-size: 12px;
+    color: #aaaaaa;
+    cursor: pointer;
+}
+
+#dialog_publicator .dropdown-menu a:hover {
+    background-color: #313131;
     color: #FFFFFF;
 }
 
-#pub_tabs .container .blockmenu .dropdown-menu {
-    background-color: #000000;
-    border: 1px solid #404040;
-}
-
-#pub_tabs .container .blockmenu .dropdown-menu a {
-    color: #EAEAEA;
-}
-
-#pub_tabs .container .blockmenu .dropdown-menu a:hover {
-    background-color: #0088CC;
-    color: #FFFFFF;
+#dialog_publicator .dropdown-menu .divider {
+    background-color: #515151;
+    border-bottom: 1px solid #404040;
+    margin: 3px 1px 3px 1px;
 }
 
 #dialog_publicator .ui-tabs .ui-tabs-panel.loading {
@@ -3523,12 +3527,12 @@ dans l'onglet thesaurus : arbres, menus contextuels
 }
 
 #dialog_publicator .api_content .blockmenu {
-    height: 100%;
     bottom: auto;
-    overflow: hidden;
     background-repeat: repeat-x;
     background-position: left bottom;
     z-index: 1000;
+    width:100%;
+    height:40px
 }
 
 #dialog_publicator .api_content .blockmenu a.selected,
@@ -3561,30 +3565,6 @@ dans l'onglet thesaurus : arbres, menus contextuels
 
 #dialog_publicator .main_menu {
     float: left;
-}
-
-#dialog_publicator .main_menu button {
-    z-index: 555;
-    font-size: 13px;
-    font-weight: normal;
-}
-
-#dialog_publicator .main_menu .submenu button {
-    width: 145px;
-    z-index: 555;
-    background-color: #111;
-    font-size: 13px;
-    font-weight: normal;
-    border-color: #666;
-}
-
-#dialog_publicator .element_menu .submenu button {
-    width: 145px;
-    z-index: 555;
-    background-color: #111;
-    font-size: 13px;
-    font-weight: normal;
-    border-color: #666;
 }
 
 #dialog_publicator .diapo .title {
